# Hackskell

./: .gitignore  Hack-Assembler.html  Hack-Translator.html  Hack.haddock  README.md  doc-index.html  hack.cabal  index-frames.html  index.html  mini_Hack-Assembler.html  mini_Hack-Translator.html
programs/vm/BasicLoop/: BasicLoop.cmp  BasicLoop.vm
programs/vm/BasicTest/: BasicTest.cmp  BasicTest.vm
programs/vm/FibonacciElement/: FibonacciElement.cmp
programs/vm/FibonacciSeries/: FibonacciSeries.cmp  FibonacciSeries.vm
programs/vm/PointerTest/: PointerTest.cmp  PointerTest.vm
programs/vm/SimpleAdd/: SimpleAdd.cmp  SimpleAdd.vm
programs/vm/SimpleFunction/: SimpleFunction.cmp  SimpleFunction.vm
programs/vm/StackTest/: StackTest.cmp  StackTest.vm
programs/vm/StaticTest/: StaticTest.cmp  StaticTest.vm
programs/vm/StaticsTest/: StaticsTest.cmp
src/Hack/: Assembler.hs  Translator.hs
src/tests/: test_assembler.hs
src/tools/: HAssemble.hs  HEmulate.c  HTranslate.hs
tests/: assembler.sh  translator.sh
